# bombie-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  requirements.txt
src/: config.rs  emulation.rs  errors.rs  lib.rs  main.rs  platform_specific.rs  py_automation.rs  utils.rs
src/py_modules/: mod.rs  py_imports.rs  py_setup.rs
src/python/: action.py  bot_handle.py  device_emulation.py  login.py  tracer.py  utils.py  web_modules.py
src/python/bombie/: bombie_objects.py  bot_logic.py  chest_action.py  cordination_module.py  cv_manager.py  data_class.py  module_manager.py  ocr_manager.py  task_action.py
